# blog-narrator

./: LICENSE  README.md  narrate.yml.example  pyproject.toml
jekyll/_includes/: audio-player.html
src/blog_narrator/: __init__.py  cli.py  frontmatter.py  generate.py  strip.py  tag.py
